force-app/main/default/objects/bc_AccountPlanRelationship__c/bc_AccountPlanRelationship__c.object-meta.xml
<CustomObject>
    <label>Account Plan Relationship</label>
    <nameField>
        <displayFormat>APR-{0000}</displayFormat>
        <label>Account Plan Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>