force-app/main/default/objects/bc_AccountPlanRelationship__c/fields/bc_AccountId__c.field-meta.xml
<CustomField>
    <fullName>bc_AccountId__c</fullName>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plan Relationships</relationshipLabel>
    <relationshipName>AccountPlanRelationships</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>