force-app/main/default/objects/bc_AccountPlanRelationship__c/fields/bc_AccountPlanId__c.field-meta.xml
<CustomField>
    <fullName>bc_AccountPlanId__c</fullName>
    <label>Account Plan</label>
    <referenceTo>AccountPlan</referenceTo>
    <relationshipLabel>Account Plan Relationships</relationshipLabel>
    <relationshipName>AccountPlanRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>