force-app/main/default/objects/bc_AccountPlanRelationship__c/fields/bc_EndDate__c.field-meta.xml
<CustomField>
    <fullName>bc_EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>