force-app/main/default/objects/bc_AccountPlanRelationship__c/fields/bc_IsActive__c.field-meta.xml
<CustomField>
    <fullName>bc_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>