force-app/main/default/objects/bc_AccountPlanRelationship__c/fields/bc_Role__c.field-meta.xml
<CustomField>
    <fullName>bc_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Participante</fullName>
                <default>true</default>
                <label>Participante</label>
            </value>
            <value>
                <fullName>Representante</fullName>
            </value>
            <value>
                <fullName>Observador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>