force-app/main/default/objects/bc_AccountPlanRelationship__c/fields/bc_StartDate__c.field-meta.xml
<CustomField>
    <fullName>bc_StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>